test/classes/initializers/generics/inheritance/setParentField-type.good
setParentField-type.chpl:13: In initializer:
setParentField-type.chpl:15: error: can't set value of field "t" from parent type during phase 1 of initialization
